# RF_Appium

./: .env  .env.example  .gitignore  README.md  base.resource  pyproject.toml
.github/workflows/: browserstack_test.yml
resources/lib/: DotEnv.py
resources/libs/: browserstack.py
resources/locators/: homeLocators.yaml  interestLocators.yaml  interestsLocators.yaml  lookingForLocators.yaml  resultSearch.yaml  searchLocators.yaml  signInLocator.yaml  welcomeLocators.yaml
resources/pages/: homePage.resource  interestPage.resource  interests.resource  lookingForPage.resource  resultSearchPage.resource  searchPage.resource  signInPage.resource  welcomePage.resource
resources/utils/: customKeywords.resource  openApp.resource  userKeywords.resource
test/: Acessar App.robot  Pesquisar Vídeo.robot  Surpreenda-me.robot  TED.robot  __init__.robot  login.robot
