[project]
name = "rf-appium"
version = "0.1.0"
description = "Automação Mobile Com Appium e Robot Framework"
authors = [
    {name = "Robot Courses",email = "git@robotcourses.com.br"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "docutils (>=0.22,<0.23)",
    "robotframework (>=7.3.2,<8.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "robotframework-browserstack (>=0.1.1,<0.2.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "robotframework-appiumlibrary (>=3.1,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
